--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   google_sign_in: ^6.0.2
   redux: ^5.0.0
   flutter_redux: ^0.10.0
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
