--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   flutter_redux: ^0.10.0
   http: ^0.13.5
   intl: ^0.17.0
+  google_fonts: ^4.0.3
+  sign_in_button: ^3.1.0
 
 dev_dependencies:
   flutter_test:
