--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   intl: ^0.17.0
   google_fonts: ^4.0.3
   sign_in_button: ^3.1.0
+  buttons_tabbar: ^1.3.6
 
 dev_dependencies:
   flutter_test:
